// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayRole renders 0 1`] = `
Array [
  .c0 {
  display-role: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders function 1`] = `
Array [
  .c0 {
  display-role: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: has;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: has;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders invalid theme path 1`] = `
Array [
  .c0 {
  display-role: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders negative number 1`] = `
Array [
  .c0 {
  display-role: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  display-role: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-role: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-role: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-role: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-role: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-role: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    display-role: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    display-role: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-role: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-role: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-role: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-role: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  display-role: July;
}

@media May {
  .c0 {
    display-role: August;
  }
}

@media April {
  .c0 {
    display-role: September;
  }
}

@media January {
  .c0 {
    display-role: November;
  }
}

@media April {
  .c0 {
    display-role: August;
  }
}

@media June {
  .c0 {
    display-role: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-role: July;
}

@media May {
  .c0 {
    display-role: August;
  }
}

@media April {
  .c0 {
    display-role: September;
  }
}

@media January {
  .c0 {
    display-role: November;
  }
}

@media April {
  .c0 {
    display-role: August;
  }
}

@media June {
  .c0 {
    display-role: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-role: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-role: November;
  }
}

@media April {
  .c0 {
    display-role: January;
  }
}

@media January {
  .c0 {
    display-role: December;
  }
}

@media April {
  .c0 {
    display-role: April;
  }
}

@media June {
  .c0 {
    display-role: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-role: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-role: November;
  }
}

@media April {
  .c0 {
    display-role: January;
  }
}

@media January {
  .c0 {
    display-role: December;
  }
}

@media April {
  .c0 {
    display-role: April;
  }
}

@media June {
  .c0 {
    display-role: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    display-role: July;
  }
}

@media April {
  .c0 {
    display-role: August;
  }
}

@media January {
  .c0 {
    display-role: September;
  }
}

@media April {
  .c0 {
    display-role: November;
  }
}

@media June {
  .c0 {
    display-role: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    display-role: July;
  }
}

@media April {
  .c0 {
    display-role: August;
  }
}

@media January {
  .c0 {
    display-role: September;
  }
}

@media April {
  .c0 {
    display-role: November;
  }
}

@media June {
  .c0 {
    display-role: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-role: January;
  }
}

@media April {
  .c0 {
    display-role: December;
  }
}

@media January {
  .c0 {
    display-role: April;
  }
}

@media April {
  .c0 {
    display-role: May;
  }
}

@media June {
  .c0 {
    display-role: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-role: January;
  }
}

@media April {
  .c0 {
    display-role: December;
  }
}

@media January {
  .c0 {
    display-role: April;
  }
}

@media April {
  .c0 {
    display-role: May;
  }
}

@media June {
  .c0 {
    display-role: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders postitive number 1`] = `
Array [
  .c0 {
  display-role: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders string 1`] = `
Array [
  .c0 {
  display-role: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: June;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: June;
}

<div
    className="c0"
  />,
]
`;

exports[`displayRole renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`displayRole renders valid theme path 1`] = `
Array [
  .c0 {
  display-role: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-role: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
